# NASDAQ-itch-Parser

./: CMakeLists.txt  README.md
docs/devlogs/: devlog-01-itch-parser.md
docs/field_notes/: week_09_15_03_2026_foundation.md  week_16_22_03_2026_parsing.md
include/: Market.h  OrderBook.h  Parser.h  messages.h  utils.h
src/: Market.cpp  OrderBook.cpp  Parser.cpp  main.cpp
